Fixes small code display on safari

--- a/css/default.scss
+++ b/css/default.scss
@@ -164,6 +164,7 @@ article {
       code {
         overflow-x: scroll;
         overflow-y: hidden;
+        display: flex;
       }
     }
   }
